--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,9 @@
 <h2>My Heroes</h2>
-<ul>
-    <li *ngFor="let hero of heroes">
-        <button type="button" >
-            <span class="badge">{{hero.id}}</span>
-            <span class="name">{{hero.name}}</span>
-        </button>
-    </li>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <button type="button" >
+      <span class="badge">{{hero.id}}</span>
+      <span class="name">{{hero.name}}</span>
+    </button>
+  </li>
 </ul>
